Integraçao do socket.io para troca de mensagens do chat

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -3,23 +3,35 @@
   <head>
     <meta charset="utf-8">
     <title>Ntalk - Agenda de contatos</title>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      const socket = io();
+      
+      socket.on('send-client', (msg) => {
+        document.getElementById('chat').innerHTML += msg;
+      });
+      const enviar = () => {
+        const nome = document.getElementById('nome').value;
+        const msg = document.getElementById('msg').value;
+        socket.emit('send-server', {nome, msg});
+      };
+    </script>
   </head>
   <body>
     <header>
-      <h1>Ntalk</h1>
-      <h4>Bem-vindo!</h4>
+      <h2>Ntalk - Chat</h2>
     </header>
+
     <section>
-      <form action="/entrar" method="post">
-        <input type="text" name="usuario[nome]" 
-          placeholder="Nome">
-        <br>
-        <input type="text" name="usuario[email]" 
-          placeholder="E-mail">
-        <br>
-        <button type="submit">Entrar</button>
-      </form>
+      <pre id="chat"></pre>
+      <input type="text" id="nome" placeholder="nome">
+      <input type="text" id="msg" placeholder="Mensagem">
+      <button onclick="enviar();">Enviar</button>
     </section>
+
+    
+    
     <footer>
       <small>Ntalk - Agenda de contatos</small>
     </footer>
